force-app/main/default/objects/VTXY_SubscriberOrg__c/VTXY_SubscriberOrg__c.object-meta.xml
<CustomObject>
    <label>Subscriber Org</label>
    <nameField>
        <label>Subscriber Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriber Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>