force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Commercial customer account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriber Orgs</relationshipLabel>
    <relationshipName>Subscriber_Orgs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>