force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Assigned_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Phone_Numbers__c</fullName>
    <label>Assigned Phone Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>