force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Conference</fullName>
            </value>
            <value>
                <fullName>Call Transfer</fullName>
            </value>
            <value>
                <fullName>Call Recording</fullName>
            </value>
            <value>
                <fullName>Call Transcription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>