force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Instance_Url__c.field-meta.xml
<CustomField>
    <fullName>Instance_Url__c</fullName>
    <description>Subscriber instance URL</description>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>