force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Last_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_At__c</fullName>
    <description>Last sync request time</description>
    <label>Last Sync At</label>
    <type>DateTime</type>
</CustomField>