force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/LastHeartbeatAt__c.field-meta.xml
<CustomField>
    <fullName>LastHeartbeatAt__c</fullName>
    <description>Last heartbeat from subscriber org.</description>
    <label>Last Heartbeat At</label>
    <type>DateTime</type>
</CustomField>