force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <description>Current license state</description>
    <label>License Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRIAL</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>GRACE</fullName>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>CANCELLED UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>