force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/MyDomain__c.field-meta.xml
<CustomField>
    <fullName>MyDomain__c</fullName>
    <description>Subscriber My Domain.</description>
    <label>My Domain</label>
    <type>Url</type>
</CustomField>