force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Installed namespace</description>
    <label>Namespace</label>
    <length>40</length>
    <type>Text</type>
</CustomField>