force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>PackageVersion__c</fullName>
    <description>Installed Vortexify package version.</description>
    <label>Package Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>