force-app/main/default/objects/VTXY_SubscriberOrg__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Grace</fullName>
                <isActive>false</isActive>
                <label>Grace</label>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
                <isActive>false</isActive>
                <label>Sync Failed</label>
            </value>
            <value>
                <fullName>Synced</fullName>
                <isActive>false</isActive>
                <label>Synced</label>
            </value>
            <value>
                <fullName>Trial</fullName>
                <isActive>false</isActive>
                <label>Trial</label>
            </value>
            <value>
                <fullName>Uninstalled.</fullName>
                <isActive>false</isActive>
                <label>Uninstalled.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>